Fix clipping on top of link list. e996fc0a9d6fa67333fa0a7923ba5dafa1455213

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1522,6 +1522,7 @@ body > footer > aside {
 		bottom: var(--margin--vertical);
 		grid-row: 1;
 		margin-bottom: initial;
+		margin-top: 0.2rem;
 		padding-bottom: initial;
 		top: initial;
 	}
